Add miscllenaeous icons to index.html

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -468,6 +468,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .mx-12 {
   margin-left: 3rem;
   margin-right: 3rem;
